feat: ordem da lista do backlog